Fix alignment of button

--- a/style.css
+++ b/style.css
@@ -120,6 +120,10 @@ header {
   grid-template-columns: auto;
 }
 
+.card-content {
+  display: inline-block;
+}
+
 .card {
   background-color: #fff;
   border-radius: 16px;
@@ -179,7 +183,7 @@ header {
   /* display: flex; */
   gap: 10px;
   margin-bottom: 10px;
-  display: inline-block;
+  display: block;
 }
 
 .tech-stack li {
@@ -194,12 +198,14 @@ header {
 }
 
 .btn-primary-outline {
+  clear: both;
   border: 1px solid #6070ff;
   border-radius: 8px;
   padding: 12px;
   background-color: transparent;
   color: #396df2;
   margin-top: 10px;
+  margin-left: 8px;
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
